# text-ascii

./: .gitignore  .nvimrc  CHANGELOG.md  CONTRIBUTING.md  README.md  cabal.project  text-ascii.cabal
.github/workflows/: haskell.yml
bench/: Main.hs  o0.csv  o2.csv  string-search-o0.csv  string-search-o2.csv
cbits/: count-block-match.c  find-first-block.c  find-first-match.c
src/Text/: Ascii.hs
src/Text/Ascii/: Char.hs  Internal.hs  QQ.hs  Unsafe.hs
src/Text/Ascii/Char/: Internal.hs
