cabal-version:      3.0
name:               text-ascii
version:            1.0.2
synopsis:           ASCII string and character processing.
description:
  A total-by-default, tested and documented library for
  working with ASCII text. Low on dependencies , high on usability.

homepage:           https://github.org/kozross/text-ascii
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.org/kozross/text-ascii/issues
copyright:          (C) Koz Ross 2021
category:           Text
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.3 || ==9.0.1
build-type:         Simple
extra-source-files:
  bench-data/big.txt
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Text.Ascii
    Text.Ascii.Char
    Text.Ascii.Internal
    Text.Ascii.QQ
    Text.Ascii.Unsafe

  build-depends:
    , base              >=4.12     && <5
    , case-insensitive  ^>=1.2.1.0
    , deepseq           ^>=1.4.0.0
    , hashable          ^>=1.3.0.0
    , megaparsec        ^>=9.0.1
    , optics-core       ^>=0.4
    , optics-extra      ^>=0.4
    , primitive         ^>=0.7.1.0
    , template-haskell  >=2.14.0.0 && <3.0.0.0

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  hs-source-dirs:   src
  default-language: Haskell2010

benchmark string-search
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , tasty-bench  ^>=0.2.2
    , text
    , text-ascii

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -O0

  hs-source-dirs:   bench
  default-language: Haskell2010
